Agrega contenido a variables.js

--- a/programa.htm
+++ b/programa.htm
@@ -1,6 +1,6 @@
 <html>
 <head><title>Programa de Prueba</title></head>
 <body>
-<p align="center"><h1>Hola mundo!</h1></p>
+<center><h1>Hola mundo!</h1></center>
 <body>
 </html>
