cambios en programa

--- a/programa.html
+++ b/programa.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>Programa de Prueba</title></head>
 <body>
-<center><h1>Hola mundo!</h1></center>
+<center><h1>Hola mundo! - </h1></center>
 <body>
 </html>
